test/type-error/06-target-type-mismatch.egi
--
-- Matcher vs target-expression type mismatch (T-MATCHALL's target side).
-- `multiset integer : Matcher [Integer]` cannot consume the target `5 : Integer`.
--
-- Expected: Type error ([Integer] vs Integer)
--

def t := matchAll 5 as multiset integer with $x -> x
